# clefcat

./: README.md
C playground/: CMakeLists.txt  enums.c  enums.h  generation_helpers.c  generation_helpers.h  main.c  notes_list.c  notes_list.h  scale_finder.c  scale_finder.h  string_manip.c  string_manip.h  t_interval.c  t_interval.h  t_note.c  t_note.h  t_scale.c  t_scale.h
src/: Chord.java  DegreeType.java  Main.java  Note.java  NoteArray.java  NoteFactory.java  NoteInput.java  NoteInterface.java  OrderedNote.java  RequireHandlers.java  Scale.java  ScaleCharacteristics.java  ScaleNote.java  Scales.java
